<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_delete_note_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/image_delete_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_delete_24"
        app:tint="@color/gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textStyle="bold"
        android:textColor="@color/gallery"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/image_delete_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_delete_note"
        app:layout_constraintTop_toTopOf="@id/image_delete_note"/>

    <TextView
        android:id="@+id/delete_note_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/delete_note_warning"
        android:textColor="@color/silver"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/image_delete_note"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/delete_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/delete_option"
        android:textColor="@color/pomegranate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_note_warning"/>

    <TextView
        android:id="@+id/cancel_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel_option"
        android:textColor="@color/chardonnay"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_option"
        app:layout_constraintTop_toBottomOf="@id/delete_note_warning"/>

</androidx.constraintlayout.widget.ConstraintLayout>