<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_add_url_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/image_add_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_insert_link_24"
        app:tint="@color/gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/add_link"
        android:textStyle="bold"
        android:textColor="@color/gallery"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/image_add_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_add_url"
        app:layout_constraintTop_toTopOf="@id/image_add_url"/>

    <EditText
        android:id="@+id/input_url"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/enter_url_hint"
        android:textColor="@color/gallery"
        android:textSize="13sp"
        android:textColorHint="@color/silver"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/image_add_url"/>

    <TextView
        android:id="@+id/add_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/add_option"
        android:textColor="@color/chardonnay"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_url"/>

    <TextView
        android:id="@+id/cancel_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel_option"
        android:textColor="@color/chardonnay"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_option"
        app:layout_constraintTop_toBottomOf="@id/input_url"/>

</androidx.constraintlayout.widget.ConstraintLayout>