<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/bar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/notes_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:id="@+id/note_quantity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/bar_title"
        app:layout_constraintTop_toBottomOf="@id/bar_title"
        android:paddingTop="2dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/note_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/items"
            />
    </LinearLayout>


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/note_quantity_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        android:background="@drawable/background_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_data_available"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add"
        android:tintMode="@color/white"
        android:layout_margin="25dp"
        android:backgroundTint="@color/cold_purple"
        app:borderWidth="0dp"
        android:contentDescription="@string/add_note_description"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>