<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_miscellaneous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        android:padding="5dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_peekHeight="47dp"
        app:cardBackgroundColor="@color/cardview_dark_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/miscellaneous_persistent"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/miscellaneous_title"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"/>

            <include
                android:id="@+id/label_color_palette"
                layout="@layout/layout_color_palette"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:id="@+id/layout_add_image"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_image_24"
                    app:tint="@color/gallery" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/add_image"
                    android:textColor="@color/gallery"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_add_url"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_insert_link_24"
                    app:tint="@color/gallery" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/add_link"
                    android:textColor="@color/gallery"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"/>

            <LinearLayout
                android:id="@+id/layout_remove_note"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:tint="@color/pomegranate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/delete_note"
                    android:textColor="@color/pomegranate"
                    android:textSize="12sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
