<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/save"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:imeOptions="actionDone"
                app:layout_constraintTop_toBottomOf="@id/back_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:includeFontPadding="false"
                android:hint="@string/default_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@null"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:maxLength="25"
                android:autofillHints="@string/default_title" />

            <TextView
                android:id="@+id/note_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="12sp"
                android:enabled="false"
                android:ellipsize="end"
                android:background="@null"/>

            <LinearLayout
                android:id="@+id/subtitle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/note_datetime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/note_label_color"
                    android:layout_width="6sp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/note_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:hint="@string/default_subtitle"
                    android:includeFontPadding="false"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:maxLength="350"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:inputType="none" />
            </LinearLayout>

            <ImageView
                android:id="@+id/note_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/subtitle_layout"/>

            <ImageView
                android:id="@+id/remove_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/background_delete_icon"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_close_24"
                app:tint="@color/tower_gray"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/note_image"
                app:layout_constraintTop_toTopOf="@id/note_image"/>

            <LinearLayout
                android:id="@+id/layout_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/note_image"
                android:visibility="gone"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/note_url_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:includeFontPadding="false"
                    android:textSize="14sp"
                    android:textColorLink="@color/silver"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/remove_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_close_24"
                    app:tint="@color/tower_gray" />
            </LinearLayout>

            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/layout_url"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:maxLines="500"
                android:background="@null"
                android:gravity="top"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:minHeight="200dp"
                android:inputType="none"
                android:paddingBottom="10dp"
                android:hint="@string/note_content_hint"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>